Wed Apr 15 10:02:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Add internal function to highlighter to count
	  the number of words.

Tue Apr 07 10:13:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Use ranges from FACET action in
	  query_range(), if they're not available from the
	  SORT_AND_COLLAPSE action.

Tue Apr 07 10:02:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
	  Update to test the new range acceleration implementation.

Tue Apr 07 10:00:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Improvements to the range
	  acceleration; use a superset of terms covering the range if
	  possible, and AND this with the range restriction.  Also, if the
	  terms cover the range exactly, don't bother with the VALUE_RANGE
	  part.

Thu Apr 02 17:54:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Add a simple cache for stemming in
	  highlighters - improves performance noticeably in some cases (I
	  measured about a 20% improvement in highlighting speed for a
	  database in which the documents are produce descriptions,
	  compared to a 50% improvement if I turn stemming in highlighting
	  off completely).

Thu Apr 02 17:25:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Avoid parsing the query into terms repeatedly
	  when highlight is called for multiple fields with the same query.

Thu Apr 02 15:47:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Implement the allow and deny
	  parameters for relevant_data()

Wed Apr 01 11:07:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update with new
	  branchpoints and tarballs.

Fri Mar 27 13:41:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
